--- a/templates/basefront.html.twig
+++ b/templates/basefront.html.twig
@@ -42,8 +42,8 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Demander un Conge</a></li>
-          <li><a href="about.html">About</a></li>
+          <li class="active"><a href="{{ path('app_conge_new') }}">Create new</a></li>
+          <li class="active"><a href="{{ path('app_conge_index') }}">consulter la liste des demandes</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
@@ -64,10 +64,11 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
-    <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
+    <div class="container d-flex flex-column align-items-sm-stretch" data-aos="zoom-in" data-aos-delay="100">
     {% block body %}
       <h1>Easy RH</h1>
       <a href="about.html" class="btn-about">About Me</a>
+       
     </div>
     {% endblock %}
   </section><!-- End Hero -->
